# octopus-app

./: .gitignore  CLAUDE.md  HTML-Artifacts.html  README.md  README_zh.md  RENAME_SUMMARY.md  generate-icons.js  generate-prism-icons.js  go.mod  go.sum  main.go  package-lock.json  package.json  prism-icon-options.html
.claude/plan/: icon-update.md  tauri-desktop-plan.md
cmd/: root.go  start.go  version.go
docs/: TAURI_BUILD.md  TAURI_CHANGELOG.md  TAURI_FEATURES.md
internal/: CLAUDE.md
internal/client/: fetch.go  http.go
internal/conf/: config.go  const.go  version.go
internal/db/: db.go
internal/helper/: channel.go  fetch.go  price.go
internal/model/: channel.go  group.go  llm.go  log.go  setting.go  stats.go
internal/op/: apikey.go  backup.go  cache.go  channel.go  group.go  llm.go  log.go  setting.go  stats.go  stats_test.go  user.go
internal/price/: presets.go  price.go
internal/relay/: metrics.go  relay.go  type.go
internal/relay/balancer/: balancer.go
internal/server/: server.go
internal/server/auth/: auth.go
internal/server/handlers/: apikey.go  channel.go  group.go  log.go  model.go  relay.go  (+4 more)
internal/task/: channel.go  init.go  sync.go  sync_llm.go  task.go
internal/update/: core.go  update.go
internal/utils/: snowflake.go
scripts/: build-go-binaries.sh  clean.sh  generate-icons.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: app.icns  icon.icns
src-tauri/src/: lib.rs  main.rs
web/: CLAUDE.md  next.config.ts  package.json  pnpm-lock.yaml
web/public/: manifest.json
(+59 files in other folders)
